# curvy_terrain_mapper

./: CMakeLists.txt  README.md  config.yaml  curvy_terrain_mapper.rviz  package.xml  subt_team_roughoctree.rviz  subt_team_roughoctree2.rviz
bash_scripts/: play_ctm_edgar.bash  play_ctm_edgar_rails.bash  play_ctm_edgar_rockpassage.bash  record_ctm_inputs.bash  record_ctm_outputs.bash  rosbag_play_20210223edgarH01.bash
cfg/: CurvyTerrainMapperConfig.cfg  TraversabilityStatusParams.yaml
include/curvy_terrain_mapper/: StairVector.h  Stairs.h  normal_3d_omp.h  planeshape.h  preanalysis.h  prediction.h  recognition.h  region_growing.h  regiongrowing.h  regions.h  ros_functions.hpp  segmentPatch.h  splitmerge.h  voxSAC.h
include/curvy_terrain_mapper/impl/: normal_3d_omp.hpp
launch/: bag_terrain.launch  curvy_terrain_mapper.launch  demo.launch  demo2.launch  demo3.launch  example_bag.launch  example_pcd.launch  grid_map.launch  monstar_demo.launch  planning.launch  realsense_demo.launch  spot_cam_points.launch  subt_CUSOUTH_demo.launch  subt_CUSOUTH_demo_replay.launch  subt_demo.launch  subt_demo2.launch  subt_demo2_replay.launch  subt_demo3.launch  subt_region_mapper.launch  subt_sim.launch  subt_sim_demo.launch  subt_sim_team_demo.launch  subt_sim_team_demo_old.launch  subt_sim_team_demo_replay.launch  subt_test_demo.launch  subt_test_demo_replay.launch
rviz/: curvy_terrain_mapper.rviz  curvy_terrain_mapper2_H01.rviz  curvy_terrain_mapper3_H01.rviz  curvy_terrain_mapper3b_H01.rviz  curvy_terrain_mapper_D01.rviz  curvy_terrain_mapper_H01.rviz  curvy_terrain_mapper_H02.rviz  curvy_terrain_mapper_X1.rviz  curvy_terrain_mapper_X2.rviz  subt_team_roughoctree2.rviz
src/: StairVector.cpp  Stairs.cpp  curvy_terrain_mapper_node.cpp  example_stairs_publisher.cpp  grid_map_node.cpp  planeshape.cpp  preanalysis.cpp  prediction.cpp  recognition.cpp  regiongrowing.cpp  regions.cpp  segmentPatch.cpp  splitmerge.cpp  stairDetectionMain.cpp  stair_detection_node.cpp  voxSAC.cpp
